tests/good/while_test1.mil
function main () {
	x = 1;
	y = 0;
	while (x <= 10) {
		y = y + x;
		x = x + 1;
		print(x);
		print(y);
	};
	print(x);
	print(y);
}
