tests/bad/division_by_0.mil
function main() {
	a = 4 / 0;
}